--- a/androidclient/src/main/AndroidManifest.xml
+++ b/androidclient/src/main/AndroidManifest.xml
@@ -38,6 +38,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.activity.MVPActivity"
+            android:label="@string/app_name"
+            android:theme="@style/LoginTheme"></activity>
+
+
         <!-- 注册网络广播 -->
         <receiver android:name=".app.NetBroadcastReceiver">
             <intent-filter>
