--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
 include ':androidclient'
+include(':libraries:adapterLibrary')
 include(':libraries:swipelistview')
 include(':libraries:androidpnLib')
 include(':libraries:SwipeBackLayoutLibary')
