网络请求统一处理

--- a/androidclient/src/main/AndroidManifest.xml
+++ b/androidclient/src/main/AndroidManifest.xml
@@ -56,12 +56,16 @@
             android:theme="@style/LoginTheme" />
         <activity
             android:name=".ui.activity.ListActivity"
-            android:theme="@style/LoginTheme"></activity>
+            android:theme="@style/LoginTheme" />
         <activity
             android:name=".ui.activity.list.PullToRefreshUseActivity"
+            android:theme="@style/LoginTheme" />
+        <activity
+            android:name=".ui.activity.NetStatusActivity"
+            android:theme="@style/LoginTheme" />
+        <activity
+            android:name=".ui.activity.HttpActivity"
             android:theme="@style/LoginTheme"></activity>
-
-
     </application>
 
 </manifest>
