activity的统一管理

--- a/androidclient/src/main/AndroidManifest.xml
+++ b/androidclient/src/main/AndroidManifest.xml
@@ -66,6 +66,9 @@
         <activity
             android:name=".ui.activity.HttpActivity"
             android:theme="@style/LoginTheme"></activity>
+        <activity
+            android:name=".ui.activity.ManagerActivity"
+            android:theme="@style/LoginTheme"></activity>
     </application>
 
 </manifest>
